--- a/i18n/es_ES.json
+++ b/i18n/es_ES.json
@@ -95,5 +95,6 @@
     "性能设置": "Configuración de rendimiento",
     "开始音频转换": "Iniciar conversión de audio",
     "停止音频转换": "Detener la conversión de audio",
-    "推理时间(ms):": "Inferir tiempo (ms):"
+    "推理时间(ms):": "Inferir tiempo (ms):",
+    "Onnx导出": "Exportación Onnx",
 }
