--- a/i18n/es_ES.json
+++ b/i18n/es_ES.json
@@ -13,6 +13,7 @@
     "特征文件路径": "Ruta del archivo de características",
     "F0曲线文件, 可选, 一行一个音高, 代替默认F0及升降调": "Archivo de curva F0, opcional, un tono por línea, en lugar de F0 predeterminado y cambio de tono",
     "转换": "Conversión",
+    "Onnx输出路径": "Ruta de salida Onnx",
     "RVC模型路径": "Ruta del modelo RVC",
     "输出信息": "Información de salida",
     "输出音频(右下角三个点,点了可以下载)": "Salida de audio (haga clic en los tres puntos en la esquina inferior derecha para descargar)",
